# SHEDULUX

./: README.md  index.html  netlify.toml  package-lock.json  package.json
backend/: package-lock.json  package.json  server.js
backend/src/: app.js
backend/src/config/: engineConfig.js
backend/src/controllers/: scheduleController.js
backend/src/middlewares/: errorHandler.js  requestLogger.js
backend/src/models/: Process.js
backend/src/routes/: scheduleRoutes.js
backend/src/services/: engineService.js
backend/src/utils/: transformOutput.js
backend/src/websocket/: wsServer.js
cpp-engine/: CMakeLists.txt
cpp-engine/include/engine/: SimulationEngine.hpp  TimelineRecorder.hpp
cpp-engine/include/matrices/: Matricescal.hpp
cpp-engine/include/models/: process.hpp  simulationstate.hpp
cpp-engine/include/sheduler/: FCFS.hpp  ISheduler.hpp  MLFQ.hpp  MultilevelQueue.hpp  Prioritynp.hpp  Priorityp.hpp  RoundRobin.hpp  SJF.hpp  SRTF.hpp
cpp-engine/include/utils/: jsonhandler.hpp
cpp-engine/src/: main.cpp  simulationengine.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  style.css
frontend/src/Hooks/: usePlayback.js  useSimulation.js
frontend/src/components/dashboard/: GanttChart.jsx  ProcessTable.jsx  StatsPanel.jsx
frontend/src/components/layouts/: Footer.jsx  Mainlayout.jsx
frontend/src/pages/: Compare.jsx  Home.jsx  Simulator.jsx
frontend/src/services/: api.js
frontend/src/stores/: simulationStore.js
frontend/src/utils/: helpers.js
(+8 files in other folders)
